Created RabbitMQ config and consumer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.url=jdbc:postgresql:${DATABASE_URL}
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWD}
 spring.jpa.hibernate.ddl-auto=update
+
+spring.rabbitmq.addresses=${RABBITMQ_ADDRESS}
+
+broker.queue.email.name=default.email
