--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.rabbitmq.addresses=${RABBITMQ_ADDRESS}
 
 broker.queue.email.name=default.email
+
+spring.mail.host=${EMAIL_HOST}
+spring.mail.port=${EMAIL_PORT}
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
